[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/main/game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/towers/tower_placer.gd" id="2_placer"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="3_hud"]
[ext_resource type="Script" path="res://scripts/ui/tower_menu.gd" id="4_tower_menu"]
[ext_resource type="Script" path="res://scripts/ui/upgrade_panel.gd" id="5_upgrade_panel"]
[ext_resource type="Script" path="res://scripts/main/platform_renderer.gd" id="6_platform"]
[ext_resource type="Shader" path="res://assets/shaders/fog.gdshader" id="7_fog_shader"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="World" type="Node2D" parent="."]
y_sort_enabled = true

[node name="PlatformRenderer" type="Node2D" parent="World"]
z_index = -10
script = ExtResource("6_platform")

[node name="TileMapLayer" type="TileMapLayer" parent="World"]

[node name="Structures" type="Node2D" parent="World"]
y_sort_enabled = true

[node name="EnvironmentProps" type="Node2D" parent="World"]

[node name="Towers" type="Node2D" parent="World"]

[node name="Enemies" type="Node2D" parent="World"]

[node name="Projectiles" type="Node2D" parent="World"]

[node name="Effects" type="Node2D" parent="World"]

[node name="TowerPlacer" type="Node2D" parent="."]
script = ExtResource("2_placer")

[node name="GroundSmokeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="SmokeRect" type="ColorRect" parent="GroundSmokeLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="FogLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="FogRect" type="ColorRect" parent="FogLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AtmosphereLayer" type="CanvasLayer" parent="."]
layer = 8

[node name="AtmosphereRect" type="ColorRect" parent="AtmosphereLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("3_hud")

[node name="TopBar" type="HBoxContainer" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_bottom = 18.0
grow_horizontal = 2

[node name="InfoLabel" type="Label" parent="HUD/TopBar"]
size_flags_horizontal = 3

[node name="SpeedLabel" type="Label" parent="HUD/TopBar"]

[node name="TowerMenu" type="PanelContainer" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("4_tower_menu")

[node name="HBox" type="HBoxContainer" parent="HUD/TowerMenu"]

[node name="UpgradePanel" type="PanelContainer" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -150.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("5_upgrade_panel")

[node name="VBox" type="VBoxContainer" parent="HUD/UpgradePanel"]

[node name="TowerNameLabel" type="Label" parent="HUD/UpgradePanel/VBox"]

[node name="PathContainer" type="VBoxContainer" parent="HUD/UpgradePanel/VBox"]

[node name="SellButton" type="Button" parent="HUD/UpgradePanel/VBox"]
text = "Sell"
